# mysql-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
mysql_mcp/: __init__.py  config.py  core.py  server.py
mysql_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_core.py
